Add in-class work about reshaping

--- a/#15.Rmd
+++ b/#15.Rmd
@@ -6,3 +6,65 @@ date: "2023-11-28"
 
 Let's put this up to github!
 
+```{r}
+library(tidyverse)
+```
+```{r}
+gdp <- read_delim("../../oecd-gdp.csv.bz2")
+gdp %>% 
+  head()
+```
+
+```{r}
+gdpLong <- 
+  gdp %>% 
+  pivot_longer(!c(country, indicator))
+gdpLong %>% 
+  head(10)
+```
+
+this changes the variable names
+```{r}
+gdpLong <- 
+  gdp %>% 
+  pivot_longer(!c(country, indicator),
+               names_to = "year",
+               values_to = "gdp")
+gdpLong %>% 
+  head(10)
+```
+
+this changes the year column from characters to numbers
+```{r}
+gdpLong <- 
+  gdp %>% 
+  pivot_longer(!c(country, indicator),
+               names_to = "year",
+               values_to = "gdp") %>% 
+  mutate(year = as.numeric(year))
+gdpLong %>% 
+  head(10)
+```
+
+```{r}
+p <- data.frame(pregnant = c("Yes", "No"),
+                male = c(NA, 25),
+                female = c(11, 18))
+p
+```
+
+```{r}
+pl <- p %>% 
+  pivot_longer(c(male, female),
+               names_to = "sex",
+               values_to = "count")
+pl
+```
+
+```{r}
+pl %>% 
+  pivot_wider(id_cols = pregnant,
+              names_from = sex,
+              values_from = count)
+```
+
